@@ -47,7 +47,7 @@ public class UsuarioDataSource implements IUsuarioDataSource {
         // Incluir endereço
         novoEndereco.setLogradouro(novoUsuarioDTO.endereco().logradouro());
         novoEndereco.setBairro(novoUsuarioDTO.endereco().bairro());
-        novoEndereco.setCep(Integer.valueOf(novoUsuarioDTO.endereco().cep()));
+        novoEndereco.setCep(novoUsuarioDTO.endereco().cep());
         novoEndereco.setNumero(novoUsuarioDTO.endereco().numero());
         novoEndereco.setCidade(novoUsuarioDTO.endereco().cidade());
         novoEndereco.setEstado(novoUsuarioDTO.endereco().estado());
@@ -71,7 +71,7 @@ public class UsuarioDataSource implements IUsuarioDataSource {
 
         return listUsuarios.stream()
                 .map(usuario -> mapToDomainUsuario(usuario, usuarioEntityToEnderecoDTO(usuario)))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -90,7 +90,7 @@ public class UsuarioDataSource implements IUsuarioDataSource {
             EnderecoEntity enderecoAlterar = usuarioAlterar.getEndereco();
             enderecoAlterar.setLogradouro(usuarioAlteracaoDTO.endereco().logradouro());
             enderecoAlterar.setBairro(usuarioAlteracaoDTO.endereco().bairro());
-            enderecoAlterar.setCep(Integer.valueOf(usuarioAlteracaoDTO.endereco().cep()));
+            enderecoAlterar.setCep(usuarioAlteracaoDTO.endereco().cep());
             enderecoAlterar.setNumero(usuarioAlteracaoDTO.endereco().numero());
             enderecoAlterar.setCidade(usuarioAlteracaoDTO.endereco().cidade());
             enderecoAlterar.setEstado(usuarioAlteracaoDTO.endereco().estado());
@@ -159,7 +159,7 @@ public class UsuarioDataSource implements IUsuarioDataSource {
                 usuario.getEndereco().getBairro(),
                 usuario.getEndereco().getCidade(),
                 usuario.getEndereco().getEstado(),
-                usuario.getEndereco().getCep().toString());
+                usuario.getEndereco().getCep());
     }
 
     private EnderecoDTO entityToDtoEndereco(EnderecoEntity enderecoEntity){
@@ -168,7 +168,7 @@ public class UsuarioDataSource implements IUsuarioDataSource {
                 enderecoEntity.getBairro(),
                 enderecoEntity.getCidade(),
                 enderecoEntity.getEstado(),
-                enderecoEntity.getCep().toString());
+                enderecoEntity.getCep());
     }
 
     private TipoUsuarioEntity buscarTipoUsuario(String tipo){
